[package]
name = "petra_grid"
edition = "2021"
version = "1.0.0"
authors = ["Derrick W. Turk <dwt@terminusdatascience.com>"]
description = "A library for reading Petra GRD grid files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/derrickturk/petra_grid_rs"

[dependencies]
byteorder = "1.4.3"
ndarray = "0.15.6"
time = { version = "0.3.20", features = ["macros"] }
